--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -9,6 +9,7 @@ section {
   }
   .contact .info-box {
     border-radius: 5%;
+    width: 250px;
     height: 229px;
     color: #444444;
     padding: 30px;
@@ -44,11 +45,20 @@ section {
     border-radius: 0;
     box-shadow: none;
     font-size: 14px;
-    border-radius: 0;
+  }
+
+  select {
+    display: block;
+    font-weight: 340;
+    color: #444444;
+    width: 100%;
+    padding: 10px 15px;
+    border: 1px solid rgb(209, 209, 209);
   }
   
   .contact .email-form input:focus,
-  .contact .email-form textarea:focus {
+  .contact .email-form textarea:focus,
+  select:focus {
     border-color: #4154f1;
   }
   
